--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,18 @@
     gap: 16px;
 }
 
-.projects button{
+.projects .button{
     background-color: white;
     border: 2px solid gray;
     font-size: 24px;
+}
+.projects .button.over{
+    color: white;
+    background-color: black;
+    border: 2px solid gray;
+    font-size: 24px;
+
+    padding: 4px 0px;
 }
 
 
