--- a/styles.css
+++ b/styles.css
@@ -28,14 +28,14 @@
 
     border: 2px solid green;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .table{
     border: 2px solid gold;
 
-    width: 60%;
+    width: 30%;
     height: 80%;
 
     display: flex;
@@ -51,17 +51,33 @@
 }
 
 .projects .button{
-    background-color: white;
     border: 2px solid gray;
     font-size: 24px;
 }
-.projects .button.over{
+.over{
     color: white;
     background-color: black;
     border: 2px solid gray;
-    font-size: 24px;
 
     padding: 4px 0px;
+}
+
+.cross-div{
+    border: 2px solid black;
+    display: flex;
+    justify-content: end;
+}
+
+.cross-button{
+    border: 2px solid gray;
+    border-radius: 12px;
+    font-size: 18px;
+    width: 24px;
+    height: 24px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
